v4.0 plan